[package]
authors = ["Nick Fitzgerald <fitzgen@gmail.com>", "Tom Tromey <tom@tromey.com>"]
description = "Exported WebAssembly API for the `source-map-mappings` crate."
license = "Apache-2.0/MIT"
name = "source-map-mappings-wasm-api"
readme = "../README.md"
repository = "https://github.com/mozilla/source-map"
version = "0.5.0"

[dependencies]
source-map-mappings = { version = "0.5.0", path = ".." }

[features]
profiling = []

[lib]
crate-type = ["cdylib"]

[profile.release]
debug = true
