[package]
authors = ["Nick Fitzgerald <fitzgen@gmail.com>", "Tom Tromey <tom@tromey.com>"]
description = "Exported WebAssembly API for the `source-map-mappings` crate."
license = "BSD-3-Clause"
name = "source-map-mappings-wasm-api"
readme = "../README.md"
repository = "https://github.com/mozilla/source-map"
version = "0.5.0"

[dependencies]
source-map-mappings = { version = "0.5.0", path = ".." }
wasm-bindgen = { version ="0.2.83" }

[features]
profiling = []

[lib]
crate-type = ["cdylib"]

[profile.release]
debug = true
